Changes carousel to create dots navigation from images so that an editor should not worry. Bugfix to carousel arrows z-index. Some house cleaning..

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -58,7 +58,7 @@ main > .block:first-child {
 
 .head {
   position: fixed;
-  z-index: 10;
+  z-index: 100;
   top: 0;
   height: 34px;
   width: 100%;
